Solution 4.0 element alignment fix

--- a/style.css
+++ b/style.css
@@ -4,28 +4,30 @@ body{
 }
 
 #container {
-    margin: 0 auto;
+    margin-left:30px;
     width: 500px;
-    text-align: center;
+    margin-top:70px;
   }
 
   /* Styles for the filter button */
   .filter-button {
-    margin: 10px;
     padding: 10px 45px;
     border: 1px solid #ddd;
     border-radius: 5px;
     background-color: #fff;
     cursor: pointer;
+    margin-top:10px;
   }
 
   /* Styles for the profession select */
   .profession-select {
-    margin: 10px;
+    margin-top:10px;
+    margin-bottom:10px;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: #000;
+    color:white;
   }
 
 #card-design{
